--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,13 @@
-{"version":2,"routes":[{"handle":"filesystem"},{"src":"/(.*)","dest":"/index.html"}]}
+{
+  "version": 2,
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/index.html",
+      "headers": [{ "key": "Cache-Control", "value": "no-store" }]
+    }
+  ]
+}
