--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
+    "micro": "^10.0.1",
     "next-themes": "^0.4.4",
+    "openai": "^4.68.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -57,10 +59,11 @@
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
