--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/((?!api).*)", "destination": "/" }
+  ],
+  "crons": [
+    {
+      "path": "/api/reviews/cron",
+      "schedule": "0 */6 * * *"
+    }
   ]
 }
