--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "stripe": "^14.0.0",
     "@supabase/supabase-js": "^2.0.0",
-    "micro": "^10.0.0"
+    "micro": "^10.0.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {},
   "scripts": {
