--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
+    "shortid": "^2.2.17",
     "sonner": "^2.0.1",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.0.2",
