--- a/ENV.example
+++ b/ENV.example
@@ -2,3 +2,7 @@ VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 VITE_INTERNAL_API_KEY=your_internal_api_key
 VITE_APP_BASE_URL=https://myblipp.com
+
+# Server-side only (used by run-migration.js). Do not commit real values.
+SUPABASE_URL=your_supabase_url
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
