feat(inbox): add telemetry table and RPCs (inbox_counts, inbox_threads); feature flag scaffolding for Conversations Lite

--- a/ENV.example
+++ b/ENV.example
@@ -6,3 +6,6 @@ VITE_APP_BASE_URL=https://myblipp.com
 # Server-side only (used by run-migration.js). Do not commit real values.
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Feature flags
+VITE_FEATURE_CONVERSATIONS_LITE=false
