feat: design refresh + shared UI; inbox lite data + telemetry; reply coach + UI; rescue lane + callback; social pipeline prepare/schedule; magic send (schedule+cron) + UI preview; missed-review recovery cron; customers segments + CSV validation; QR builder tech selector; vercel crons

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,14 @@
     {
       "path": "/api/reviews/sync/all?key=INTERNAL_API_KEY_VALUE",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/_cron/magic-send-dispatcher",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/_cron/missed-review-recovery",
+      "schedule": "0 * * * *"
     }
   ]
 }
