--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
+    "@tanstack/react-query": "^5.56.2",
     "recharts": "^2.15.1",
     "shortid": "^2.2.17",
     "sonner": "^2.0.1",
