--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,11 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/).*)",
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'strict-dynamic' https://*.supabase.co https://accounts.google.com https://www.gstatic.com https://www.google.com https://vercel.live https://va.vercel-scripts.com https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://api.stripe.com https://accounts.google.com https://www.googleapis.com https://vercel.live https://va.vercel-scripts.com; frame-src 'self' https://js.stripe.com https://accounts.google.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests"
+          "value": "default-src 'self'; script-src 'self' https://*.supabase.co https://*.supabase.in https://accounts.google.com https://www.gstatic.com https://www.google.com https://vercel.live https://va.vercel-scripts.com https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://api.stripe.com https://accounts.google.com https://www.googleapis.com https://vercel.live https://va.vercel-scripts.com; frame-src 'self' https://js.stripe.com https://accounts.google.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests"
         },
         {
           "key": "X-Frame-Options",
