feat: Complete landing page redesign and auth system fixes
- Redesigned hero section with full viewport height coverage
- Removed hero CTAs (Get Started/Watch Demo) keeping only header buttons
- Updated header with gradient sliding underlines on nav tabs
- Fixed auth system with proper Supabase singleton and environment handling
- Added transparent logo and improved header styling
- Updated typography with Google Fonts (Outfit/Manrope)
- Fixed OAuth flow and callback handling
- Improved responsive design and visual hierarchy
- Added proper error handling and loading states

--- a/ENV.example
+++ b/ENV.example
@@ -1,11 +1,27 @@
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-VITE_INTERNAL_API_KEY=your_internal_api_key
-VITE_APP_BASE_URL=https://myblipp.com
+# Local development environment variables
+# Copy this file to .env.local and fill in your actual values
 
-# Server-side only (used by run-migration.js). Do not commit real values.
-SUPABASE_URL=your_supabase_url
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+# Supabase Configuration (Vite - REQUIRED)
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key-here
+
+# Site URL for OAuth redirects (Vite - REQUIRED)
+VITE_SITE_URL=http://localhost:5173
+
+# Internal API Key (if needed)
+VITE_INTERNAL_API_KEY=your-internal-api-key
+
+# App Base URL
+VITE_APP_BASE_URL=http://localhost:5173
 
 # Feature flags
 VITE_FEATURE_CONVERSATIONS_LITE=false
+
+# Server-side only (used by run-migration.js). Do not commit real values.
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Next.js compatibility (if using Next.js)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
