--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base44-app",
+  "name": "blipp-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@base44/sdk": "^0.1.2",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -39,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.55.0",
+    "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -57,7 +57,6 @@
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
-    "@tanstack/react-query": "^5.56.2",
     "recharts": "^2.15.1",
     "shortid": "^2.2.17",
     "sonner": "^2.0.1",
