fix: Use environment variable for OAuth redirect URL instead of hardcoded localhost

--- a/ENV.example
+++ b/ENV.example
@@ -6,7 +6,10 @@ VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 
 # Site URL for OAuth redirects (Vite - REQUIRED)
+# For local development:
 VITE_SITE_URL=http://localhost:5173
+# For production, set this to:
+# VITE_SITE_URL=https://myblipp.com
 
 # Internal API Key (if needed)
 VITE_INTERNAL_API_KEY=your-internal-api-key
