--- a/ENV.example
+++ b/ENV.example
@@ -24,6 +24,15 @@ VITE_FEATURE_CONVERSATIONS_LITE=false
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
+# Stripe Configuration (Vite - REQUIRED for checkout)
+VITE_STRIPE_BASIC_PRICE_ID=price_basic_plan_id
+VITE_STRIPE_PRO_PRICE_ID=price_pro_plan_id
+VITE_STRIPE_ENTERPRISE_PRICE_ID=price_enterprise_plan_id
+
+# Server-side Stripe (for API endpoints)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
 # Next.js compatibility (if using Next.js)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
