--- a/vercel.json
+++ b/vercel.json
@@ -17,12 +17,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/server.js"
-    }
-  ],
-  "rewrites": [
+    },
     {
-      "source": "/((?!api/).*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/dist/index.html"
     }
   ],
   "crons": [
