--- a/vercel.json
+++ b/vercel.json
@@ -34,6 +34,10 @@
       "dest": "/dist/favicon-16.png"
     },
     {
+      "src": "/post-checkout",
+      "dest": "/dist/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/dist/index.html"
     }
