--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,22 @@
       "dest": "/server.js"
     },
     {
-      "src": "/assets/(.*)",
+      "src": "/assets/(.*\\.js)$",
       "dest": "/dist/assets/$1",
       "headers": {
         "Content-Type": "application/javascript"
       }
+    },
+    {
+      "src": "/assets/(.*\\.css)$",
+      "dest": "/dist/assets/$1",
+      "headers": {
+        "Content-Type": "text/css"
+      }
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/dist/assets/$1"
     },
     {
       "src": "/images/(.*)",
