Fix OAuth callback flow and improve auth handling
- Add specific /auth/callback rewrite in vercel.json
- Improve AuthCallback component with better error handling
- Add logout function to auth-utils
- Update Header to use centralized logout function
- Add proper delays for auth state transitions

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/auth/callback",
+      "destination": "/dist/index.html"
+    },
+    {
       "source": "/post-checkout",
       "destination": "/dist/index.html"
     },
