Fix vercel.json - correct auth callback routing to /index.html

--- a/vercel.json
+++ b/vercel.json
@@ -20,15 +20,15 @@
     },
     {
       "source": "/auth/callback",
-      "destination": "/dist/index.html"
+      "destination": "/index.html"
     },
     {
       "source": "/post-checkout",
-      "destination": "/dist/index.html"
+      "destination": "/index.html"
     },
     {
       "source": "/(.*)",
-      "destination": "/dist/index.html"
+      "destination": "/index.html"
     }
   ],
   "headers": [
