--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.475.0",
     "micro": "^10.0.1",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "openai": "^4.68.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
