Fix Vercel routing for QBO endpoints
- Added /api/qbo/(.*) rewrite rule to route QBO endpoints to server.js
- This fixes the 200 HTML responses and 405 Method Not Allowed errors
- QBO endpoints will now be properly handled by the server instead of frontend

--- a/vercel.json
+++ b/vercel.json
@@ -111,6 +111,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/qbo/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/qbo-oauth-callback",
       "destination": "/api/qbo-oauth-callback.js"
     },
