Fix QuickBooks OAuth callback flow
- Moved callback endpoint from separate file to server.js for proper routing
- Updated vercel.json to route /api/qbo-oauth-callback to server.js
- Fixed frontend to open popup window instead of navigating current window
- Added proper message handling between popup and parent window
- Callback now properly exchanges code for tokens and stores in database
- Fixed 404 error on callback URL

--- a/vercel.json
+++ b/vercel.json
@@ -116,7 +116,11 @@
     },
     {
       "source": "/api/qbo-oauth-callback",
-      "destination": "/api/qbo-oauth-callback.js"
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/test-qbo-callback",
+      "destination": "/api/test-qbo-callback.js"
     },
     {
       "source": "/auth/callback",
