Fix Vercel routing for API endpoints
- Add missing rewrite rules for /api/reviews, /api/sequences, /api/customers, /api/health
- Fixes issue where API calls return HTML instead of JSON
- Ensures all API endpoints are properly routed to server.js

--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,23 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/reviews",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/reviews/(.*)",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/sequences",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/customers",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/health",
       "destination": "/server.js"
     },
     {
