Fix feedback system and email tracking
- Add missing Vercel routing for feedback API endpoints
- Create /api/email-track/open and /api/email-track/click endpoints
- Fix 'Cannot GET /api/email-track/click' error
- Enable proper email link tracking and redirects
- Fix feedback form settings and private feedback API routing

--- a/vercel.json
+++ b/vercel.json
@@ -51,6 +51,18 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/feedback-form-settings",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/private-feedback",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/api/email-track/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/ai/(.*)",
       "destination": "/server.js"
     },
