Complete QR Builder functionality setup
- Create database migration for QR codes and techs tables
- Add generate_qr_code() function and RLS policies
- Install qrcode library for QR generation
- Create QR download and PNG endpoints
- Add techs API endpoint for technician management
- Update vercel.json with techs route
- QR Builder now fully functional with proper database support

--- a/vercel.json
+++ b/vercel.json
@@ -119,6 +119,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/techs",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/checkout/(.*)",
       "destination": "/server.js"
     },
