--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
     "openai": "^4.68.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
