Complete QR code customer flow
- Create QR redirect endpoint (/api/r/[code]) that tracks scans
- Create public feedback form page for customers (/feedback-form/:businessId)
- Add routing for feedback form in main app
- QR codes now redirect customers to branded feedback form
- Feedback submissions go to Collected Feedback tab
- Complete end-to-end QR code workflow implemented

--- a/vercel.json
+++ b/vercel.json
@@ -123,6 +123,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/r/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/checkout/(.*)",
       "destination": "/server.js"
     },
