Fix QR code generation, sentiment badges, and email sending
- Fix sentiment badge hover colors (keep solid colors on hover)
- Create missing /api/send-followup-email endpoint for follow-up emails
- Update vercel.json routing for email endpoint
- Add proper error handling and HTML email templates
- All fixes ready for production deployment

--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/send-followup-email",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/email-track/(.*)",
       "destination": "/server.js"
     },
