--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/qr-feedback",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/send-followup-email",
       "destination": "/server.js"
     },
