Private feedback: fix resolve ownership + vercel wildcard routes; Customers: infinite scroll (8 at a time) with sentinel; keep smooth UX

--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/private-feedback/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/qr-feedback",
       "destination": "/server.js"
     },
