Fix: Add missing /api/billing/* rewrite rule to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -143,6 +143,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/billing/(.*)",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/profile/(.*)",
       "destination": "/server.js"
     },
