--- a/vercel.json
+++ b/vercel.json
@@ -191,6 +191,10 @@
       "destination": "/index.html"
     },
     {
+      "source": "/settings/(.*)",
+      "destination": "/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
