Fix: Add comprehensive Vercel rewrite rules and catch-all route for /settings/billing 404 issue

--- a/vercel.json
+++ b/vercel.json
@@ -191,6 +191,26 @@
       "destination": "/index.html"
     },
     {
+      "source": "/settings",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/settings/billing",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/settings/business-profile",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/settings/team-roles",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/settings/audit-log",
+      "destination": "/index.html"
+    },
+    {
       "source": "/settings/(.*)",
       "destination": "/index.html"
     },
