SMS System Backend - Database, APIs, and Utilities
- Add SQL migration for businesses SMS columns, messages, contacts tables
- Create database helper with Supabase operations
- Implement Surge API client with TFN provisioning (TODOs for actual API)
- Add phone normalization and SMS compliance utilities
- Create API endpoints:
  - POST /api/surge/provision-number (provision TFN + submit verification)
  - GET /api/surge/status (check verification status)
  - POST /api/sms/webhook (unified webhook for all Surge events)
  - POST /api/sms/send (send SMS with compliance checks)
- All endpoints include auth TODOs and validation
- Webhook routes by event.type to handle inbound, delivery, verification
- No breaking changes to existing functionality

--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,41 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "api/surge/provision-number.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/surge/status.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/sms/webhook.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/sms/send.js",
+      "use": "@vercel/node"
     }
   ],
   "rewrites": [
+    {
+      "source": "/api/surge/provision-number",
+      "destination": "/api/surge/provision-number.js"
+    },
+    {
+      "source": "/api/surge/status",
+      "destination": "/api/surge/status.js"
+    },
+    {
+      "source": "/api/sms/webhook",
+      "destination": "/api/sms/webhook.js"
+    },
+    {
+      "source": "/api/sms/send",
+      "destination": "/api/sms/send.js"
+    },
     {
       "source": "/api/subscription/(.*)",
       "destination": "/server.js"
