FIX: Add API route to vercel.json and create pages/api endpoint
- Add /api/send-test route to vercel.json configuration
- Create pages/api/send-test.js for proper Vercel routing
- This should fix the 405 error and make the API work

--- a/vercel.json
+++ b/vercel.json
@@ -103,6 +103,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/send-test",
+      "destination": "/pages/api/send-test.js"
+    },
+    {
       "source": "/api/email-track/(.*)",
       "destination": "/server.js"
     },
