FIX: Route /api/send-test to server.js in vercel.json
- Change destination from /pages/api/send-test.js to /server.js
- This should fix the 405 error and make the API accessible
- The endpoint is defined in server.js, not pages/api/

--- a/vercel.json
+++ b/vercel.json
@@ -104,7 +104,7 @@
     },
     {
       "source": "/api/send-test",
-      "destination": "/pages/api/send-test.js"
+      "destination": "/server.js"
     },
     {
       "source": "/api/email-track/(.*)",
