--- a/vercel.json
+++ b/vercel.json
@@ -202,6 +202,10 @@
       "source": "/api/qbo/(.*)",
       "destination": "/server.js"
     },
+    {
+      "source": "/api/google/(.*)",
+      "destination": "/server.js"
+    },
             {
               "source": "/api/qbo-oauth-callback",
               "destination": "/server.js"
