feat: implement comprehensive QBO token refresh system
- Add centralized refreshQBOtoken() utility function
- Add needsTokenRefresh() helper (refreshes 7 days before expiry)
- Update webhook to proactively refresh tokens
- Add daily cron job for token refresh (2 AM UTC)
- Mark integrations as 'token_expired' when refresh fails
- Comprehensive error handling and logging

This ensures QBO connections stay active without manual intervention.

--- a/vercel.json
+++ b/vercel.json
@@ -291,6 +291,10 @@
     {
       "path": "/api/automation-executor",
       "schedule": "*/1 * * * *"
+    },
+    {
+      "path": "/api/cron/refresh-qbo-tokens",
+      "schedule": "0 2 * * *"
     }
   ]
 }
