fix: automation executor cron job routing and method
- Change automation executor from POST to GET (Vercel cron uses GET)
- Add /api/automation-executor rewrite rule to vercel.json
- Fix routing so cron job can reach the endpoint

This should fix the automation executor not running and emails not being sent.

--- a/vercel.json
+++ b/vercel.json
@@ -202,6 +202,10 @@
       "source": "/api/google/(.*)",
       "destination": "/server.js"
     },
+    {
+      "source": "/api/automation-executor",
+      "destination": "/server.js"
+    },
             {
               "source": "/api/qbo-oauth-callback",
               "destination": "/server.js"
