feat: implement QBO connection persistence and fix template text sync
- Add QBO token refresh cron job (every 6 hours) to Vercel config
- Add QBO connection health check cron job (every 2 hours)
- Fix template text sync to always fetch fresh data from database
- Improve selectTemplateByAI to include custom_message field
- Add proactive connection testing and auto-refresh on 401 errors
- Ensure webhook uses latest saved template text, not cached data

--- a/vercel-cron-config.json
+++ b/vercel-cron-config.json
@@ -3,6 +3,14 @@
     {
       "path": "/api/automation-executor",
       "schedule": "*/1 * * * *"
+    },
+    {
+      "path": "/api/cron/refresh-qbo-tokens",
+      "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/check-qbo-connections",
+      "schedule": "0 */2 * * *"
     }
   ]
 }
