Add SMS endpoint to server.js and update vercel.json routing

--- a/vercel.json
+++ b/vercel.json
@@ -47,6 +47,10 @@
       "destination": "/api/sms/send.js"
     },
     {
+      "source": "/api/surge/sms/send",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/subscription/(.*)",
       "destination": "/server.js"
     },
