Add SMS status endpoint and debug logging
- Add /api/surge/sms/status endpoint to check SMS configuration
- Add debug logging to SMS send endpoint and frontend
- Add SMS setup checker script
- Update vercel.json with new SMS status route

--- a/vercel.json
+++ b/vercel.json
@@ -51,6 +51,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/surge/sms/status",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/subscription/(.*)",
       "destination": "/server.js"
     },
