Add direct SMS test endpoint
- Add /api/test-sms-direct endpoint that bypasses business lookup
- Use hardcoded business configuration for testing
- Add vercel.json route for test endpoint
- Create test script to verify SMS functionality

--- a/vercel.json
+++ b/vercel.json
@@ -55,6 +55,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/test-sms-direct",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/subscription/(.*)",
       "destination": "/server.js"
     },
