Fix SMS API endpoint routing
- Add /api/sms-send route to server.js (working version)
- Add vercel.json routing for /api/sms-send
- Remove problematic standalone API function
- Use server.js approach that we know works
- SMS functionality confirmed working!

--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,10 @@
       "destination": "/server.js"
     },
     {
+      "source": "/api/sms-send",
+      "destination": "/server.js"
+    },
+    {
       "source": "/api/subscription/(.*)",
       "destination": "/server.js"
     },
